[project]
name = "slidesimcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mteb>=1.38.30",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "ruff>=0.12.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
]
